cluster/minio/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio-deployment
  namespace: minio
spec:
  selector:
    matchLabels:
      app: minio
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: minio
    spec:
      volumes:
      - name: storage
        persistentVolumeClaim:
          claimName: minio-pvc
      containers:
      - name: minio
        image: minio/minio:latest
        args:
        - "server"
        - "/storage"
        - "--console-address"
        - ":10000"
        ports:
          - containerPort: 9000
          - containerPort: 10000
        volumeMounts:
        - name: storage
          mountPath: "/storage"
