cluster/minio/test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-minio
  namespace: minio
spec:
  containers:
  - name: test-minio
    image: curlimages/curl
    command: ['sleep', '1000']
