cluster/minio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: minio
spec:
  type: ClusterIP
  ports:
    - port: 9000
      targetPort: 9000
      protocol: TCP
  selector:
    app: minio
---
apiVersion: v1
kind: Service
metadata:
  name: console
  namespace: minio
spec:
  type: ClusterIP
  ports:
    - port: 10000
      targetPort: 10000
      protocol: TCP
  selector:
    app: minio
