cluster/minio/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-ingress
  namespace: minio
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  rules:
  - host: minio.noise
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: console
            port:
              number: 10000
  - host: storage.minio.noise
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: minio
            port:
              number: 9000
